2007-01-10 19:07  james

	* Add the headers added in the last change to the checks in configure.

2007-01-10 19:02  james

	* Include more kernel headers in wi_linux.c as newer kernels don't
	  do it for you when you are in userspace. Thanks to Maximilian Schleiss
		for help debugging.

2007-01-09 20:24  james

	* Add a check for libxfce4util in ./configure as it is possible to have
	  the panel headers without the util headers. I haven't used libs and 
		cflags which is probably a bug.

2007-01-09 00:04  james

	* Fix a bug in which the signal strength was incorrectly calculated, due to
	  a max value being assumed that is not correct and usually too small.
		This change will probably reduce the signal strength reported, but that is
		because it was incorrect before. Bug 1499.
	* Add config.h to panel-plugin/wi_linux.c to enable the trace debugging
	  properly.

2007-01-07 23:28  james

	* Remove an unused variable that caused a failure with -Werror.

2007-01-07 22:45  james

	* Fix an autoconf problem that needed sys/socket.h including before
	  linux/wireless.h in its test program.

2007-01-07 16:49  james

	* Add an option to make the panel icon square.

2006-12-21 22:23  james

	* Add a THANKS file for people who contribute to the plugin.

2006-12-21 21:34  james

	* Add patch from Petr Salinger <Petr.Salinger@seznam.cz> to fix
	  compilation on kfreebsd.

2006-09-11 08:11  nick

	* Fix typo in panel-plugin/Makefile.am
	* BUmp version to 0.5.3 for release

2006-08-10 19:03  james

	* Make the plugin visible when added.
	* Add an option to hide when no device present.

2006-08-10 01:59  james

	* Fixed the regression that made the icon square.
	* Improve the build system slightly.

2006-08-09 23:23  james

	* Added Italian translation. (Thanks ema).

2006-08-09 17:51  james

	* Fixed a bug that meant it didn't work on most linux systems

2006-05-03 23:23  james

	* Updated to work with new API

2004-08-03 18:46  benny
